--- a/.env.development
+++ b/.env.development
@@ -10,6 +10,6 @@ VITE_APP_DEBUG_TOOL =
 VITE_APP_DISABLE_DEVTOOL = false
 
 # 是否开启代理
-VITE_OPEN_PROXY = false
+VITE_OPEN_PROXY = true
 # 是否开启开发者工具
-VITE_OPEN_DEVTOOLS = false
+VITE_OPEN_DEVTOOLS = true
