--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@vitejs/plugin-vue": "^5.1.4",
     "@vitejs/plugin-vue-jsx": "^4.0.1",
     "autoprefixer": "^10.4.20",
+    "axios-mock-adapter": "^2.1.0",
     "boxen": "^8.0.1",
     "bumpp": "^9.7.1",
     "cz-git": "^1.10.1",
