--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "dayjs": "^1.11.13",
     "defu": "^6.1.4",
     "disable-devtool": "^0.3.8",
+    "echarts": "^5.5.1",
     "element-plus": "^2.8.5",
     "eruda": "^3.4.0",
     "floating-vue": "5.2.2",
@@ -49,6 +50,7 @@
     "scule": "^1.3.0",
     "vconsole": "^3.15.1",
     "vue": "^3.5.12",
+    "vue-echarts": "^7.0.3",
     "vue-m-message": "^4.0.2",
     "vue-router": "^4.4.5"
   },
