--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "qs": "^6.13.0",
     "scule": "^1.3.0",
     "vconsole": "^3.15.1",
+    "vite": "5.2.0",
     "vue": "^3.5.12",
     "vue-echarts": "^7.0.3",
     "vue-m-message": "^4.0.2",
@@ -101,7 +102,6 @@
     "unplugin-auto-import": "^0.18.3",
     "unplugin-turbo-console": "^1.10.4",
     "unplugin-vue-components": "^0.27.4",
-    "vite": "^5.4.9",
     "vite-plugin-app-loading": "^0.3.0",
     "vite-plugin-archiver": "^0.1.1",
     "vite-plugin-banner": "^0.8.0",
@@ -112,10 +112,6 @@
     "vite-plugin-vue-devtools": "^7.5.2",
     "vite-plugin-vue-meta-layouts": "^0.4.3",
     "vue-tsc": "^2.1.6"
-  },
-  "simple-git-hooks": {
-    "pre-commit": "pnpm lint-staged",
-    "preserveUnused": true
   },
   "config": {
     "commitizen": {
