--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   },
   "scripts": {
     "dev": "vite",
-    "build": "vue-tsc -b && vite build",
+    "build": "vite build --base=/jianong-admin/",
     "build:test": "vue-tsc -b && vite build --mode test",
     "serve": "http-server ./dist -o",
     "serve:test": "http-server ./dist-test -o",
@@ -105,6 +105,7 @@
     "vite-plugin-app-loading": "^0.3.0",
     "vite-plugin-archiver": "^0.1.1",
     "vite-plugin-banner": "^0.8.0",
+    "vite-plugin-checker": "^0.8.0",
     "vite-plugin-compression2": "^1.3.0",
     "vite-plugin-fake-server": "^2.1.2",
     "vite-plugin-pages": "^0.32.3",
@@ -119,3 +120,4 @@
     }
   }
 }
+
