--- a/.env.development
+++ b/.env.development
@@ -1,7 +1,7 @@
 # 应用配置面板
 VITE_APP_SETTING = true
 # 页面标题
-VITE_APP_TITLE = 某农业公司信息管理系统
+VITE_APP_TITLE = 公司后台信息管理系统
 # 接口请求地址，会设置到 axios 的 baseURL 参数上
 VITE_APP_API_BASEURL = http://localhost:9090
 # 调试工具，可设置 eruda 或 vconsole，如果不需要开启则留空
