--- a/.env.production
+++ b/.env.production
@@ -10,9 +10,9 @@ VITE_APP_DEBUG_TOOL =
 VITE_APP_DISABLE_DEVTOOL = false
 
 # 是否在打包时启用 Mock
-VITE_BUILD_MOCK = false
+VITE_BUILD_MOCK = true
 # 是否在打包时生成 sourcemap
-VITE_BUILD_SOURCEMAP = false
+VITE_BUILD_SOURCEMAP = true
 # 是否在打包时开启压缩，支持 gzip 和 brotli
 VITE_BUILD_COMPRESS = gzip,brotli
 # 是否在打包后生成存档，支持 zip 和 tar
